--- a/web/static/css/timeline.scss
+++ b/web/static/css/timeline.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 #input-and-timeline {
   position: relative;
   flex: 1;
@@ -171,6 +173,11 @@
     margin: 0;
     width: 100%;
     height: 38px;
+    
+    @media (#{$narrow-viewport}) {
+      // http://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
+      font-size: 16px;
+    }
   }
 }
 .editing #new-coto {
